<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:context=".tour.encounter.EncounterDisclaimerFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/encounter_disclaimer_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/empty_description"
            app:srcCompat="@drawable/ic_close_black_24dp"
            app:tint="@color/accent" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp">

        <social.entourage.android.tools.view.HtmlTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorLink="@color/accent"
            android:textSize="@dimen/entourage_font_medium"
            app:htmlText="@string/encounter_disclaimer_text"/>
    </ScrollView>

    <CheckBox
        android:id="@+id/encounter_disclaimer_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:text="@string/encounter_disclaimer_checkbox"
        android:textSize="@dimen/entourage_font_large"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        android:id="@+id/encounter_disclaimer_ok_button"
        style="@style/AccentButton"
        />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
