...
            app:ccp_textColor="@color/pre_onboard_black"
            app:ccp_textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/ui_login_phone_et_phone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_rounded_login_grey_light_stroke"
            android:ems="10"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ui_login_phone_ccp_code"
            app:layout_constraintTop_toTopOf="@+id/ui_login_phone_ccp_code" />

        <EditText
            android:id="@+id/ui_login_et_code"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_rounded_login_grey_light_stroke"
            android:ems="10"
            android:maxLength="6"
...
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/ui_login_phone_et_phone"
            app:layout_constraintStart_toStartOf="@+id/ui_login_phone_ccp_code"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/ui_login_button_signup"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="60dp"
...
