<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginBottom="5dp"
    android:keepScreenOn="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_service_running"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            style="@style/WhiteButton"
            android:id="@+id/tour_stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tour_stop"/>

    </LinearLayout>

    <Button
        style="@style/WhiteButton"
        android:id="@+id/tour_add_encounter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tour_create_encounter_button"/>

</LinearLayout>